--- a/src/App.module.css
+++ b/src/App.module.css
@@ -47,7 +47,7 @@
 }
 
 .text {
-  margin-top: 15px;
+  margin-top: 30px;
 }
 
 .text h2 {
@@ -63,7 +63,7 @@
 .text p {
   color: var(--soft-blue);
   font-size: 14px;
-  margin-top: 15px;
+  /* margin-top: 15px; */
   font-weight: 300;
 }
 
@@ -74,6 +74,10 @@
   padding: 5px 0px 15px 0px;
   border-bottom: 1px solid var(--line);
 }
+
+/* .static p {
+  margin: 0;
+} */
 
 .etherium {
   display: flex;
